recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: not found: value legnth
	snowSide(levels-1, legnth/3)
                           ^